@@ -165,7 +165,7 @@ public class RecipeCatalysts {
             }
         }
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
-            CSVParser csvParser = CSVFormat.EXCEL.withFirstRecordAsHeader().parse(reader);
+            CSVParser csvParser = CSVFormat.EXCEL.builder().setHeader().setSkipHeaderRecord(true).build().parse(reader);
             for (CSVRecord record : csvParser) {
                 final String handler = record.get("handler");
                 final String modId = record.get("modId");
@@ -194,7 +194,7 @@ public class RecipeCatalysts {
                 try {
                     // gently handling copy&paste from handlers.csv
                     Class<?> clazz = Class.forName(handler);
-                    Object object = clazz.newInstance();
+                    Object object = clazz.getConstructor().newInstance();
                     if (object instanceof IRecipeHandler) {
                         if (forceClassName) {
                             forceClassNameList.add(handler);
